[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/quaver.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Square12.tres" type="DynamicFont" id=2]
[ext_resource path="res://TransitionStageScene.gd" type="Script" id=3]

[sub_resource type="Animation" id=5]
resource_name = "BlackBgFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "QuoteFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 92
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=6]
resource_name = "StageNameFade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 64
extra_spacing_top = 15
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
resource_name = "TitleFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "ContinueTextFade"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.458111 ) ]
}

[node name="TransitionStageScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.9 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/BlackBgFadeIn = SubResource( 5 )

[node name="Quote" type="Label" parent="."]
visible = false
margin_left = 250.0
margin_top = 258.0
margin_right = 1040.0
margin_bottom = 411.0
custom_colors/font_color = Color( 0.752941, 0.768627, 0.847059, 1 )
custom_fonts/font = ExtResource( 2 )
text = "\"If you want to build a product that's relevant to people, you need to put yourself in their shoes.\"
-Jack Dorsey"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Quote"]
anims/QuoteFadeIn = SubResource( 8 )

[node name="StageNumber" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 402.0
margin_top = 285.0
margin_right = 888.0
margin_bottom = 377.0
custom_fonts/font = SubResource( 2 )
text = "Empathize"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="StageNumber"]
anims/StageNameFade = SubResource( 6 )

[node name="Title" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 411.0
margin_top = 191.0
margin_right = 879.0
margin_bottom = 278.0
custom_colors/font_color = Color( 0.752941, 0.768627, 0.847059, 1 )
custom_fonts/font = SubResource( 1 )
text = "STAGE X"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
anims/TitleFadeIn = SubResource( 7 )

[node name="TapToContinue" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 487.0
margin_top = 480.0
margin_right = 808.0
margin_bottom = 504.0
custom_colors/font_color = Color( 0.756863, 0.756863, 0.756863, 1 )
custom_fonts/font = SubResource( 3 )
text = "(Press a key to continue)"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TapToContinue"]
anims/ContinueTextFade = SubResource( 4 )

[connection signal="animation_finished" from="Background/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
